--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,16 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/r_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/r_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".login.LoginActivity"/>
+        android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity android:name=".Schedule"></activity>
+        <activity android:name=".login.Join2" />
+        <activity android:name=".login.Join1" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".login.LoginActivity" />
         <activity android:name=".Splash.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
