--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.makeus.elder">
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/r_launcher"
@@ -9,7 +10,8 @@
         android:roundIcon="@mipmap/r_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".Schedule"></activity>
+        <activity android:name=".contact.Call"></activity>
+        <activity android:name=".call.Schedule" />
         <activity android:name=".login.Join2" />
         <activity android:name=".login.Join1" />
         <activity android:name=".MainActivity" />
